small refactoring and added csv worker

--- a/Grpc.CsvWorker/appsettings.json
+++ b/Grpc.CsvWorker/appsettings.json
@@ -12,20 +12,13 @@
     },
     "Endpoints": {
       "Http": {
-        "Protocols": "Http1AndHttp2",
+        "Protocols": "Http2",
         "Url": "http://*:80"
       },
       "Https": {
-        "Protocols": "Http1AndHttp2",
+        "Protocols": "Http2",
         "Url": "https://*:443"
       }
     }
-  },
-  "ConnectionStrings": {
-    "MSSQL": "Server=localhost;Database=TestDb;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true"
-  },
-  "Grpc": {
-    "ExcelWorker": "http://localhost:5195",
-    "CsvWorker": "http://localhost:5053"
   }
 }
