--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ConnectionStrings__MSSQL=Server=mssql;Database=TestDb;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true
       - Grpc__ExcelWorker=http://grpc.excelworker
+      - Grpc__CsvWorker=http://grpc.csvworker
     ports:
       - "8000:80"
       - "8001:443"
@@ -32,3 +33,14 @@ services:
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=yourStrong(!)Password
+
+  grpc.csvworker:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "8110:80"
+      - "8111:443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
